Agregar monitor de servicios

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,10 @@ services:
     depends_on:
       - consulta-factura
       - download-file
+
+  monitor:
+    volumes:
+      - ./monitor/:/mnt/
+    depends_on:
+      - nginx
+    build: ./monitor
