--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -6,6 +6,7 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
+    proxy_connect_timeout 5s; 
   }
   location /facturacion/download-file {
     rewrite ^/facturacion/download-file(.*) $1 break;
@@ -13,5 +14,6 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
+    proxy_connect_timeout 5s; 
   }
 }
