Agregar al monitor generación de eventos para notificación de errores

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,9 @@ services:
     depends_on:
       - nginx
     build: ./monitor
+
+  log_errores:
+    build: ./log_errores
+    command: celery -A tasks worker --loglevel=info -Q error_log
+    depends_on:
+      - redis
