--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -16,4 +16,13 @@ server {
     proxy_set_header Host $host;
     proxy_connect_timeout 5s; 
   }
+
+  location /facturacion/log-factura {
+    rewrite ^/facturacion/log-factura(.*) $1 break;
+    proxy_pass http://log_factura:5002;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header Host $host;
+    proxy_connect_timeout 5s; 
+  }
 }
