--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,17 @@ services:
     image: redis
     volumes:
       - ./data:/data
+
+  realizar-factura:
+    volumes:
+      - ./microservicio_realizar_factura/:/mnt/
+    build: ./microservicio_realizar_factura
+    working_dir: /flaskr
+    depends_on:
+      - redis
+    ports:
+      - "5001:5001"
+
   log_factura:
     volumes:
       - ./microservicio_log_factura/:/mnt/
