--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -6,7 +6,7 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
-    proxy_connect_timeout 5s; 
+    proxy_connect_timeout 3s; 
   }
   location /facturacion/download-file {
     rewrite ^/facturacion/download-file(.*) $1 break;
@@ -14,16 +14,16 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
-    proxy_connect_timeout 5s; 
+    proxy_connect_timeout 3s; 
   }
 
   location /facturacion/log-factura {
     rewrite ^/facturacion/log-factura(.*) $1 break;
-    proxy_pass http://log_factura:5002;
+    proxy_pass http://log-factura:5002;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
-    proxy_connect_timeout 5s; 
+    proxy_connect_timeout 3s; 
   }
 
   location /facturacion/realizar-factura {
@@ -32,6 +32,6 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
-    proxy_connect_timeout 5s; 
+    proxy_connect_timeout 3s; 
   }
 }
