--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ instance/
 instance/
 logs/*.log
 logs/backup
+# logs sample files
+!logs/service_monitor_20240906_184511.log
+!logs/service_restart_20240906_184519.log
 
 # Ignorar archivos y carpetas del ambiente virtual
 venv/
